<resources>
    <string name="app_name">UQCS</string>

    <!-- Home Page -->
    <string name="view_members_list">Members</string>
    <string name="view_docs">Documents</string>
    <string name="uqcs_full_name">The University of Queensland Computing Society</string>
    <string name="calendar">Calender</string>


    <!-- Events Calendar -->
    <string name="date_format">%s %d, %d</string>
    <string name="add_event">Add event</string>
    <string name="events_calendar_title">Events</string>
    <string name="view_details">View Details</string>
    <string name="no_events">No Event Selected</string>
    <string name="fetching_events">Fetching Events…</string>

    <!-- Events Details -->
    <string name="events_details_title"> Events Details</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="back">Back</string>


    <!-- Members List -->n
    <string name="fetching_members">Fetching Members…</string>

    <!-- Signup -->
    <string name="signup">Signup</string>


    <!-- Sign In -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating…</string>

    <!-- Misc -->
    <string name="loading_text">Loading…</string>
    <string name="uqcs_logo_content_desc">Uqcs logo</string>

    <!-- Documentation -->
    <string name="fetching_documentation">Fetching Documentation…</string>
    <string name="editing">Editing…</string>

    <!-- Announcements -->
    <string name="slack_announcement">Slack Announcement</string>
    <string name="body">Body</string>
    <string name="channels">Channels :</string>

</resources>
