<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/uqcs_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/uqcs_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uqcs_full_name"
            android:textSize="30sp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/uqcs_logo"/>
    <Button
            android:id="@+id/members_list_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/uqcs_button"
            android:text="@string/view_members_list"
            android:fontFamily="@font/open_sans_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/documentation_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/uqcs_button"
            android:text="@string/view_docs"
            android:fontFamily="@font/open_sans_semibold"
            app:layout_constraintTop_toBottomOf="@id/members_list_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>