<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="fill_parent"
                                             android:layout_height="fill_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:fitsSystemWindows="true">

    <include layout="@layout/loading_overlay"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/uqcs_title"
                    android:layout_width="210dp"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:text="UQ Computing Society"
                    app:layout_constraintTop_toTopOf="@id/uqcs_logo"
                    app:layout_constraintBottom_toBottomOf="@id/uqcs_logo"
                    android:textSize="30dp"
                    android:fontFamily="@font/open_sans_light"/>

            <ImageView android:id="@+id/uqcs_logo"
                       android:src="@drawable/uqcs_logo_no_bg"
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:layout_margin="24dp"
                       android:layout_gravity="center_horizontal"
                       app:layout_constraintLeft_toRightOf="@id/uqcs_title"/>
        </android.support.constraint.ConstraintLayout>



        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="login"
                android:padding="12dp"
                android:text="@string/login"/>

        <TextView android:id="@+id/hint_text"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="Use GitHub credentials to login."
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>